clean up css & fix trash

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                             <button class="about_btn_right" style="color: #ececec" onclick="about_scroller(1)"> &rarr; </button>
 
                                     </div><br>
-                                    <img src="src/cases/about_me/decorated_portrait.jpg" style="height: 40%" loading="lazy" alt="close up of Megan"> <br>
+                                    <img src="src/cases/about_me/decorated_portrait.jpg" style="height: 35%; width: auto;" loading="lazy" alt="close up of Megan"> <br><br>
                                     <h1>A lil' something about Megan:</h1><br>
                                     
                                     <p class="blu"> 
@@ -222,7 +222,7 @@
                     <div id="extras_window_content">
                         <button class="trash_icon" onclick="trashOpenClose('mia1'); onclick=trashOpenClose('mia2'); onclick=trashOpenClose('mia3');" style="bottom: 15%; left: 5%;"><img src="src/desktop_items/mia.svg" loading="lazy" style="width: 80px;" alt="Mia folder button" ></button>
                         <button class="trash_icon" onclick="trashOpenClose('terminal_window'); " style="top: 15%; right: 15%;"><img src="src/desktop_items/terminal.svg" style="width: 80px;" loading="lazy" alt="Website Stats Button"></button>
-                        <button class="trash_icon" onclick="trashOpenClose('thankyou_note'); " style="top: 45%; left: 70%;"><img  src="src/desktop_items/ode.svg" style="width: 80px;" loading="lazy" alt="ode to this website button"></button>
+                        <button class="trash_icon" onclick="trashOpenClose('thankyou_note'); " style="top: 45%; left: 20%;"><img  src="src/desktop_items/ode.svg" style="width: 80px;" loading="lazy" alt="ode to this website button"></button>
                         <a href="https://www.youtube.com/watch?v=v0mCY80knCU" target="_blank" rel="noopener" style="cursor: alias;"><img src="src/desktop_items/youtube.svg" alt ="youtube video button" loading="lazy" style="width: 80px; top: 50%; right: 5%;" ></a>
                     </div>
             </div>
