--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
                 <div class="window_closebar"><button onclick="trashOpenClose('terminal_window')" aria-label="toggle open/close"><img class="close_btn" src="src/close.svg" alt="close button"></button><p>About This Site</p></div>
                 <div class="terminal">
                         <div class="css-typing">
-                            <p>Every piece of this website is hand-drawn, and contains X illustrations.</p>
-                            <p>Some website stat here<br><br></p>
+                            <p>This site is 99.24% images, all of which were either hand-drawn</p>
+                            <p>or photographed by me. Even the icons!  <br><br></p>
                             <p>This site couldn't have been completed without the help of my best friend </p>
                             <p>Korey, my right hand woman for brainstorming. <br><br></p>
                             <p>A special thanks to Hudson for teaching me how to properly use GitHub </p>
