change scroll animation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <canvas id="viewport" ></canvas> 
         <div class="page-wrapper" id="portfolio_page_wrapper">
         
-        <button id="bounce_arrow_button" onclick="scrollToPosition(3500)"><img class="downArrow bounce" src="src/arrow.svg" alt="Scroll down indicator"/></button>
+        <button id="bounce_arrow_button" onclick="scrollToPosition(3500)"><img class="downArrow bounce" src="src/arrow.gif" alt="Scroll down indicator"/></button>
 
         <div class="homepage">
                 <div class="homepage_context">
