--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     <div id="extras_window_content">
                         <button class="trash_icon" onclick="trashOpenClose('mia1'); onclick=trashOpenClose('mia2'); onclick=trashOpenClose('mia3');" style="bottom: 15%; left: 5%;"><img src="src/desktop_items/mia.svg" loading="lazy" style="width: 80px;" alt="Mia folder button" ></button>
                         <button class="trash_icon" onclick="trashOpenClose('terminal_window'); " style="top: 15%; right: 15%;"><img src="src/desktop_items/terminal.svg" style="width: 80px;" loading="lazy" alt="Website Stats Button"></button>
-                        <button class="trash_icon" onclick="trashOpenClose('thankyou_note'); " style="top: 45%; left: 20%;"><img  src="src/desktop_items/ode.svg" style="width: 80px;" loading="lazy" alt="ode to this website button"></button>
+                        <!-- <button class="trash_icon" onclick="trashOpenClose('thankyou_note'); " style="top: 45%; left: 20%;"><img  src="src/desktop_items/ode.svg" style="width: 80px;" loading="lazy" alt="ode to this website button"></button> -->
                         <a href="https://www.youtube.com/watch?v=v0mCY80knCU" target="_blank" rel="noopener" style="cursor: alias;"><img src="src/desktop_items/youtube.svg" alt ="youtube video button" loading="lazy" style="width: 80px; top: 50%; right: 5%;" ></a>
                     </div>
             </div>
