webgl fixesgit add .

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <img class="splash_img" id="web_development_splash" src="src/splash+contexts/web.png" alt="Web Development: From page design to web development and launch, Design Elixir is your one-stop shop for tailored and unique websites with functionality across all platforms. Services include: HTML/CSS/Javascript, Custom Wordpress Themes, Page Design, Development, E-Commerce">
                 <img class="splash_img" id="illustration_splash" src="src/splash+contexts/illustrations.png" alt="Graphic Design & Illustration: We create clean and concise graphic design content that makes your brand stand out. Combined with illustrations, ranging from decorative elements for websites, logos, digital art, or even posters, add a custom and unique touch to all types of media. Services: Branding & Logo Design, Marketing Materials, Digital / Vector Art, Print and Digital Advertsiements">
             </div>    
-            <div class="loading_scroller"></div>
+            <!-- <div class="loading_scroller"></div> -->
   
         </div>
             
