fix dependency versions

--- a/error.html
+++ b/error.html
@@ -1,7 +1,7 @@
 <style>
 body { background: #2f335c;}
-h1 {font-family: 'fatfrank', sans-serif, bold; font-size: 2rem; color: white; text-align: center;}
-a {font-family:'Poppins', sans-serif; font-size: 1.5rem; color: white; text-decoration: none; text-align: center;}
+h1 {font-family: 'GreycliffCF-Heavy', sans-serif, bold; font-size: 2rem; color: white; text-align: center;}
+a {font-family:'GreycliffCF-Light', sans-serif; font-size: 1.5rem; color: white; text-decoration: none; text-align: center;}
 a:hover {color: gray;}
 </style>
 
