small fixes for performance

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
       <title>Design Elixir - A Creative Studio by Megan Byers</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="#2f335c">
       <meta name="description" content="Portfolio website for Design Elixir Studio out of Boulder, Colorado. Owned and operated by graphic designer, illustrator, and web developer Megan Rae Byers"/>
-      <link type="text/css" rel="stylesheet" href="css/index.css"> 
+      <link type="text/css" rel="preload" href="css/index.css"> 
       <link rel="shortcut icon" type="image/png" href="src/favicon.png">
     
 
      <script type="text/javascript">
-     console.log('Last updated: 10.23.2020 23:45')
+     console.log('Last updated: 10.23.2020 23:57')
      document.onreadystatechange = () => {
   if (document.readyState === 'complete') {
     console.log("its ready, slut!!!") 
