fix mobile spacing

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div id="unlock_container">
                         <div class="unlock_mobile">
                                 <div class="unlock_slide_container">
-                                    <p id="unlock_text" class="blink-1" style="position: absolute; left: 35%; bottom: 60px; color: white;">Slide to Unlock</p>
+                                    <p id="unlock_text" class="blink-1" style="position: absolute; left: 35%; bottom: 40px; color: white;">Slide to Unlock</p>
                                     <div id="unlock">
                                         <button id="unlock_btn" onclick="unlock(true)">-> </button>
                                     </div>
@@ -530,12 +530,13 @@
                 <div class="window_closebar"><button onclick="toggleOpenClose('about_window')" aria-label="toggle open/close"><img class="close_btn" src="src/close.svg" alt="close button"></button><p>About Design Elixir</p></div>
                 <div class="about_content">
                     <div class="about_section" id="section1">
-                        <div class="about_col_left">
+                        <div class="about_col_left" style="top: 0;">
                                 <img src="src/cases/about_me/portrait.jpg" loading="lazy" style="width: 100%" alt="Portrait of Megan">
                         </div>
                         <div class="about_col_right">
                                 <h1 class="about_h1">Design Elixir houses the creative mind of Megan Byers and her quest to create media with brilliant character and user-experience.</h1>
                                 <p>I’m an all-in-one, one-woman creative studio, specializing in web development, graphic design and illustration. I believe great things come from great connections, and serving small businesses and entrepreneurs enables powerful relationships rooted in a collective, passionate vision. </p>
+                                <br>
                             </div>
                     </div>
 
@@ -565,7 +566,7 @@
                                             <li>E-Commerce</li>
                                             <li>Search Engine Optimization</li>
                                         </ul>
-            
+                                        <br><br>
                                     </div>
                     </div>
                     <div class="about_section" id="section3" style="display: none;">
@@ -575,7 +576,7 @@
                             <div class="about_col_right">
                                 <h1>A lil' something about Megan</h1>
                                 <p>Megan strives to learn a little something about everything. Raised on the Colorado Rockies, you can find her on alpine trails dancing like nobody’s watching. She finds inspiration everywhere, but especially in wild flowers. In case you were wondering what Megan’s done on any given day since May 23rd, 2013, she can pull up a journal entry from any day from then to now. Within these pages you’ll find a drive for new skills and experiences that never sleeps. Whether it be coding, painting, fly-fishing, growing a garden or cooking a mean ribeye steak, Megan is curious and eager to tackle challenges head on. </p>
-                                <!-- <br><br><a style="background: #2f335c; padding: 10px 20px 10px 20px; width: 100%; margin: 0;" aria-label="Send an Email to Megan" href="mailto:megan@designelixir.studio" target="_blank" rel='noopener'>Contact me - let's spill some ink!</a> -->
+                                <br><br>
                             </div>
                     </div>
                 </div>
