fix lock bar on mobile

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div id="unlock_container">
                         <div class="unlock_mobile">
                                 <div class="unlock_slide_container">
-                                    <p id="unlock_text" class="blink-1" style="position: absolute; left: 35%; bottom: 40px; color: white;">Slide to Unlock</p>
+                                    <p id="unlock_text" class="blink-1" style="position: absolute; left: 35%; bottom: 20px; color: white;">Slide to Unlock</p>
                                     <div id="unlock">
                                         <button id="unlock_btn" onclick="unlock(true)">-> </button>
                                     </div>
@@ -529,7 +529,7 @@
                 <div class="window_closebar"><button onclick="toggleOpenClose('about_window')" aria-label="toggle open/close"><img class="close_btn" src="src/close.svg" alt="close button"></button><p>About Design Elixir</p></div>
                 <div class="about_content">
                     <div class="about_section" id="section1">
-                        <div class="about_col_left" style="top: 0;">
+                        <div class="about_col_left">
                                 <img src="src/cases/about_me/portrait.jpg" loading="lazy" style="width: 100%" alt="Portrait of Megan">
                         </div>
                         <div class="about_col_right">
