mobile docs hemp rx edits

--- a/index.html
+++ b/index.html
@@ -710,17 +710,22 @@
                         </div>
                         <div class="artboard_columnfifty">
                             <img src="src/cases/docs_hemp/screenshot_docs_3.png" class="tlgs_screenshot mobile_hide" style="width: 100%; box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75);" loading="lazy" alt="snapshot of Doc's Hemp RX mission statement">
-                            <img src="src/cases/docs_hemp/docs_tinctures.gif" style="margin-top: 65px; width: 80%;" loading="lazy" alt="snapshot of Twin Lakes General Store home page">
+                            <img src="src/cases/docs_hemp/docs_tinctures.gif" class="mobile_hide" style="margin-top: 65px; width: 80%;" loading="lazy" alt="tincture product photos">
                             
 
                         </div>
                         <div class="artboard_columnfifty">
                             <div class="tlgs_section_h3">
-                                <h3 class="tlgs_flex_text">Doc’s Hemp RX website tells the passion-rooted story of a business dedicated to providing premium hemp products to those who could benefit from it the most.</h3>
-                                <p class="blu tlgs_flex_text">The site needed to be easy to use and invite customers with a variety of ailments to try high-quality hemp products with simple, organic ingredients. The homepage educates customers of the superior manufacturing process of Doc's Hemp RX tinctures and its mission to provide an affordable natural remedy. Designed with fonts, coloring, and graphic elements parallel to the existing vintage-style packaging, Doc’s Hemp RX website stands out against the typically industrial layout of other hemp product websites. </p>
+                                <h3 class="tlgs_flex_text">Doc’s Hemp RX website tells the passion-rooted story of a business dedicated to providing affordable, premium hemp products.</h3>
+                                <p class="blu tlgs_flex_text">The site needed to be easy to use and invite customers with a variety of ailments to try high-quality hemp products with simple, organic ingredients. The homepage educates customers of the superior manufacturing process of Doc's Hemp RX tinctures and its mission to provide an affordable natural remedy to those who could benefit from it the most. Designed with fonts, coloring, and graphic elements parallel to the existing vintage-style packaging, Doc’s Hemp RX website stands out against the typically industrial layout of other hemp product websites. </p>
+                                <br>
                             </div>
-                            <img src="src/cases/docs_hemp/docs_screenshot_2.png" class="tlgs_screenshot overlap_img" style="width: calc(100% + 50px); margin-bottom: 150px; box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75);" loading="lazy" alt="snapshot of product page on Doc's Hemp RX site">
-                            
+                            <img src="src/cases/docs_hemp/test_docs_gif.gif" class="tlgs_screenshot tincture" style="width: 100%; margin-bottom: 25px;  box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75);" loading="lazy" alt="snapshot of Doc's Hemp RX mission statement">
+
+                            <img src="src/cases/docs_hemp/docs_screenshot_2.png" class="tlgs_screenshot overlap_img mobile_hide" style="width: calc(100% + 50px); margin-bottom: 100px; box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75);" loading="lazy" alt="snapshot of product page on Doc's Hemp RX site">
+
+                            <img src="src/cases/docs_hemp/docs_tinctures.gif" class="tincture" style="width: 100%;" loading="lazy" alt="tincture product photos">
+
                         </div>
                         <br>
                         <div class="artboard_bottom" style="padding-top: 50px;">
