fix webgl on safari

--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@
                                     
                                 </div>
                                 <div class="artboard_navigation">
-                                        <a style="margin: 50px;" onclick="toggleOpenClose('miller_project')" class="case_nav_button"><h6>Next Case Study</h6></a>           
+                                        <a style="margin: 50px 50px 100px 50px;" onclick="toggleOpenClose('miller_project')" class="case_nav_button"><h6>Next Case Study</h6></a>           
                                         <br>
                                 </div>
                         
