add all projects folder

--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@
                         <img src="src/desktop_items/vans_icon.png" loading="lazy" alt="Vans Project Icon">
                         <span class="icon_label">Vans</span>
                     </button>
+                    <button class="desktop_icons icon_button" onclick="toggleOpenClose('instagram_window')" style="right: 8%; top: 35%;" aria-label="open close projects window">
+                        <img src="src/desktop_items/folder.svg" loading="lazy" alt="All Projects Icon">
+                        <span class="icon_label">All Projects</span>
+                    </button>
                  
 
             </div>
