fix vans image sizing

--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
                                         </div>
                                         <div class="artboard_response_column">
                                             <img src="src/cases/vans/tpose.jpg" loading="lazy" style="width:100%" alt="megan on fence in sneakers">
-                                            <img src="src/cases/vans/vans_post_v2.webp" onerror="this.src = 'src/cases/vans/backup_vans.gif'" loading="lazy" alt="Vans instagram post featuring my photos">
+                                            <img src="src/cases/vans/vans_post_v2.webp" style="width:100%" onerror="this.src = 'src/cases/vans/backup_vans.gif'" loading="lazy" alt="Vans instagram post featuring my photos">
                                         </div>  
                                         
                                 </div>
