update meta data for social media

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#2f335c"/>
-    
+    <meta property="og:title" content="Design Elixir | A Creative Studio by Megan Rae Byers">
+    <meta property="og:description" content="An all-in-one, one-woman creative studio specializing in web development, graphic design, and illustration.">
+    <meta property="og:image" content="src/de_cover.png">
+    <meta property="og:url" content="http://designelixir.studio">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="description" content="Portfolio website for Design Elixir Studio out of Boulder, Colorado. Owned and operated by graphic designer, illustrator, and web developer Megan Rae Byers"/>
     <link type="text/css" rel="stylesheet" href="css/index.css"> 
     <link rel="shortcut icon" type="image/png" href="src/favicon.png">
