update social media meta tags

--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Design Elixir - A Creative Studio by Megan Byers</title>
-    <meta charset="utf-8">
+    <!-- Primary Meta Tags -->
+    <title>Design Elixir | A Creative Studio by Megan Rae Byers</title>
+    <meta name="title" content="Design Elixir | A Creative Studio by Megan Rae Byers">
+    <meta name="description" content="An all-in-one, one-woman creative studio specializing in web development, graphic design, and illustration for passionate small businesses and entrepreneurs. ">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://designelixir.studio">
+    <meta property="og:title" content="Design Elixir | A Creative Studio by Megan Rae Byers">
+    <meta property="og:description" content="An all-in-one, one-woman creative studio specializing in web development, graphic design, and illustration for passionate small businesses and entrepreneurs. ">
+    <meta property="og:image" content="https://raw.githubusercontent.com/coloradical/Rae_Portfolio/master/src/de_cover.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://designelixir.studio">
+    <meta property="twitter:title" content="Design Elixir | A Creative Studio by Megan Rae Byers">
+    <meta property="twitter:description" content="An all-in-one, one-woman creative studio specializing in web development, graphic design, and illustration for passionate small businesses and entrepreneurs. ">
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/coloradical/Rae_Portfolio/master/src/de_cover.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#2f335c"/>
-    <meta property="og:title" content="Design Elixir | A Creative Studio by Megan Rae Byers">
-    <meta property="og:description" content="An all-in-one, one-woman creative studio specializing in web development, graphic design, and illustration.">
-    <meta property="og:image" content="src/de_cover.png">
-    <meta property="og:url" content="http://designelixir.studio">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="description" content="Portfolio website for Design Elixir Studio out of Boulder, Colorado. Owned and operated by graphic designer, illustrator, and web developer Megan Rae Byers"/>
+    
     <link type="text/css" rel="stylesheet" href="css/index.css"> 
     <link rel="shortcut icon" type="image/png" href="src/favicon.png">
 
