update instagram URL

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ console.log("Last updated: "+ document.lastModified + " MST");
             <div class="social_banners_wrapper">
                     <div id="social_banners"> 
                             <a onclick="toggleOpenClose('social_banners')"><img src="src/social_media/close_banner2.svg" loading="lazy" alt="toggle open close social media menu"></a>
-                            <a target="_blank" rel='noopener' href="https://www.instagram.com/meganbyers.jpeg/"><img src="src/social_media/instagram_banner.svg" loading="lazy" class="banner" alt="instagram"></a>
+                            <a target="_blank" rel='noopener' href="https://www.instagram.com/designelixir.studio/"><img src="src/social_media/instagram_banner.svg" loading="lazy" class="banner" alt="instagram"></a>
                             <a target="_blank" rel='noopener' href="https://unsplash.com/@designelixir"> <img src="src/social_media/unsplash_banner.svg" loading="lazy" class="banner" alt="unsplash"></a>
                             <a target="_blank" rel='noopener' href="https://github.com/coloradical"> <img src="src/social_media/github_banner.svg" loading="lazy" class="banner" alt="github"></a>
                             <a target="_blank" rel='noopener' href="https://www.linkedin.com/in/meganraebyers/"><img src="src/social_media/linkedin_banner.svg" loading="lazy" class="banner"  alt="linkedin"></a>
@@ -143,7 +143,7 @@ console.log("Last updated: "+ document.lastModified + " MST");
     
         <div id="desktop_toolbar_right">
             <a class="mobile_hide" href="https://www.linkedin.com/in/meganraebyers/" rel='noopener' target="_blank" aria-label="Open Megan's LinkedIn"><img src= "src/social_media/linkedIn_simple.svg" alt="linked in icon"></a>
-            <a class="mobile_hide" href="https://www.instagram.com/meganbyers.jpeg/" rel='noopener' target="_blank" aria-label="Open Megan's Instagram"><img src= "src/social_media/instagram_simple.svg" alt="instagram icon"></a>
+            <a class="mobile_hide" href="https://www.instagram.com/designelixir.studio/" rel='noopener' target="_blank" aria-label="Open Megan's Instagram"><img src= "src/social_media/instagram_simple.svg" alt="instagram icon"></a>
             <a class="mobile_hide" href="https://github.com/coloradical" rel='noopener' target="_blank" aria-label="Open Megan's Github"><img src= "src/social_media/github_simple.svg" alt="github icon"></a>
             <a class="mobile_hide" href="https://unsplash.com/@designelixir" rel='noopener' target="_blank" aria-label="Open Megan's Unsplash"><img src= "src/social_media/unsplash_simple.svg" alt="unsplash icon"></a>
             <a class="mobile_reveal"><img id="mobile_wifi" src="src/desktop_items/wifi.svg" alt="wifi symbol"></a>
@@ -248,7 +248,7 @@ console.log("Last updated: "+ document.lastModified + " MST");
                                     </a>
                                 </div>
                                 <div class="socials_mobile_icons">
-                                        <a class="icon_button" target="_blank" rel='noopener' href="https://www.instagram.com/meganbyers.jpeg/">
+                                        <a class="icon_button" target="_blank" rel='noopener' href="https://www.instagram.com/designelixir.studio/">
                                             <img src="src/desktop_items/insta_app.png" loading="lazy" alt="Social_Icons_mobile">
                                             <span class="social_app_label">Instagram</span>
                                     </a>
@@ -284,7 +284,7 @@ console.log("Last updated: "+ document.lastModified + " MST");
                     Contact me at <strong><a style="color: black; font-size: 1rem;" aria-label="Send an Email to Megan" href="mailto:megan@designelixir.studio" target="_blank" rel='noopener'>megan@designelixir.studio</a></strong> for any questions or inquiries. </p> <br>
                 <p>I've got a vibrant web presence, the internet is my favorite thing after all. Check out my code, attempts at photography, illustrations, work history and more.</p><br>
                 <a href="https://unsplash.com/@designelixir" rel='noopener' target="_blank"><img src="src/social_media/unsplash_file.svg" loading="lazy" alt="unsplash.com shortcut"></a>
-                <a href="https://www.instagram.com/meganbyers.jpeg/" rel='noopener' target="_blank"><img src="src/social_media/instagram_file.svg" loading="lazy" alt="Megans instagram shortcut"></a>
+                <a href="https://www.instagram.com/designelixir.studio/" rel='noopener' target="_blank"><img src="src/social_media/instagram_file.svg" loading="lazy" alt="Megans instagram shortcut"></a>
                 <a href="https://www.linkedin.com/in/meganraebyers/" rel='noopener' target="_blank"><img src="src/social_media/linkedin_file.svg" loading="lazy" alt="megan's linkedin shortcut"></a>
                 <a href="https://github.com/coloradical" rel='noopener' target="_blank"><img src="src/social_media/github_file.svg" loading="lazy" alt="megan's github shortcut"></a><br><br><br>
                 <a class="mail_button" aria-label="Send an Email to Megan" href="mailto:megan@designelixir.studio" target="_blank" rel='noopener'>Send a Message</a>
