--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta property="twitter:image" content="https://raw.githubusercontent.com/coloradical/Rae_Portfolio/master/src/de_cover.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#2f335c"/>
+    <meta name="google-site-verification" content="2-3HnMchuIrMGUQBHwgr0FxndDKC5WWszyCoWXSJY5o" />
     
     <link type="text/css" rel="stylesheet" href="css/index.css"> 
     <link rel="shortcut icon" type="image/png" href="src/favicon.png">
