--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ console.log("Last updated: "+ document.lastModified + " MST");
                             <a onclick="toggleOpenClose('social_banners')"><img src="src/social_media/close_banner2.svg" loading="lazy" alt="toggle open close social media menu"></a>
                             <a target="_blank" rel='noopener' href="https://www.instagram.com/designelixir.studio/"><img src="src/social_media/instagram_banner.svg" loading="lazy" class="banner" alt="instagram"></a>
                             <a target="_blank" rel='noopener' href="https://unsplash.com/@designelixir"> <img src="src/social_media/unsplash_banner.svg" loading="lazy" class="banner" alt="unsplash"></a>
-                            <a target="_blank" rel='noopener' href="https://github.com/coloradical"> <img src="src/social_media/github_banner.svg" loading="lazy" class="banner" alt="github"></a>
+                            <a target="_blank" rel='noopener' href="https://github.com/designelixir"> <img src="src/social_media/github_banner.svg" loading="lazy" class="banner" alt="github"></a>
                             <a target="_blank" rel='noopener' href="https://www.linkedin.com/in/meganraebyers/"><img src="src/social_media/linkedin_banner.svg" loading="lazy" class="banner"  alt="linkedin"></a>
                         </div>
                         <button aria-label="Open/Close Social Media Links" id="social_banner_toggle"><img id="social_banner" class="banner"  src="src/social_media/socials.svg" alt="open social media menu"></button>
@@ -145,7 +145,7 @@ console.log("Last updated: "+ document.lastModified + " MST");
         <div id="desktop_toolbar_right">
             <a class="mobile_hide" href="https://www.linkedin.com/in/meganraebyers/" rel='noopener' target="_blank" aria-label="Open Megan's LinkedIn"><img src= "src/social_media/linkedIn_simple.svg" alt="linked in icon"></a>
             <a class="mobile_hide" href="https://www.instagram.com/designelixir.studio/" rel='noopener' target="_blank" aria-label="Open Megan's Instagram"><img src= "src/social_media/instagram_simple.svg" alt="instagram icon"></a>
-            <a class="mobile_hide" href="https://github.com/coloradical" rel='noopener' target="_blank" aria-label="Open Megan's Github"><img src= "src/social_media/github_simple.svg" alt="github icon"></a>
+            <a class="mobile_hide" href="https://github.com/designelixir" rel='noopener' target="_blank" aria-label="Open Megan's Github"><img src= "src/social_media/github_simple.svg" alt="github icon"></a>
             <a class="mobile_hide" href="https://unsplash.com/@designelixir" rel='noopener' target="_blank" aria-label="Open Megan's Unsplash"><img src= "src/social_media/unsplash_simple.svg" alt="unsplash icon"></a>
             <a class="mobile_reveal"><img id="mobile_wifi" src="src/desktop_items/wifi.svg" alt="wifi symbol"></a>
             <a class="toolbar_hide mobile_hide" id="time"></a>
