--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#2f335c"/>
     <meta name="google-site-verification" content="2-3HnMchuIrMGUQBHwgr0FxndDKC5WWszyCoWXSJY5o" />
-    
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="PicHHlvNCOMB6KUWqZ5maQ" async></script>
     <link type="text/css" rel="stylesheet" href="css/index.css"> 
     <link rel="shortcut icon" type="image/png" href="src/favicon.png">
 
